# FragilityCurves

./: .gitignore  README.md  analyze_experiment.py  dataset_processor.py  gpr_model.py  indicaciones de nomenclatura utilizada.txt  plot_uncertainty.py  predict_gpr.py  pyproject.toml
Aggregate_dwellings/: 1-C-R-Y-1-1-1R11_1R11_1R11.txt  1-C-R-Y-1-1-1R11_1R11_3R11.txt  1-C-R-Y-1-1-2R11_1R11_3R11.txt  1-C-R-Y-1-1-3R11_1R11_1R11.txt  1-C-R-Y-1-1-3R11_1R11_2R11.txt  1-C-R-Y-1-1-3R11_1R11_3R11.txt  1-L-R-Y-1-1-1R11_1R11_1R11.txt  1-L-R-Y-1-1-1R11_1R11_3R11.txt  1-L-R-Y-1-1-1R11_2R11_3R11.txt  1-L-R-Y-1-1-1R11_3R11_1R11.txt  1-L-R-Y-1-1-1R11_3R11_2R11.txt  1-L-R-Y-1-1-1R11_3R11_3R11.txt  1-R-R-Y-1-1-1R11_1R11_1R11.txt  1-R-R-Y-1-1-1R11_3R11_1R11.txt  1-R-R-Y-1-1-2R11_3R11_1R11.txt  1-R-R-Y-1-1-3R11_1R11_1R11.txt  1-R-R-Y-1-1-3R11_2R11_1R11.txt  1-R-R-Y-1-1-3R11_3R11_1R11.txt  2-C-R-Y-1-1-1R11_2R11_3R11.txt  2-C-R-Y-1-1-2R11_2R11_2R11.txt  2-C-R-Y-1-1-2R11_2R11_3R11.txt  2-C-R-Y-1-1-3R11_2R11_1R11.txt  2-C-R-Y-1-1-3R11_2R11_2R11.txt  2-C-R-Y-1-1-3R11_2R11_3R11.txt  2-L-R-Y-1-1-2R11_1R11_3R11.txt  2-L-R-Y-1-1-2R11_2R11_2R11.txt  2-L-R-Y-1-1-2R11_2R11_3R11.txt  2-L-R-Y-1-1-2R11_3R11_1R11.txt  2-L-R-Y-1-1-2R11_3R11_2R11.txt  2-R-R-Y-1-1-1R11_3R11_2R11.txt  2-R-R-Y-1-1-2R11_2R11_2R11.txt  2-R-R-Y-1-1-2R11_3R11_2R11.txt  2-R-R-Y-1-1-3R11_1R11_2R11.txt  2-R-R-Y-1-1-3R11_2R11_2R11.txt  3-C-R-Y-1-1-1R11_3R11_1R11.txt  3-C-R-Y-1-1-1R11_3R11_2R11.txt  3-C-R-Y-1-1-1R11_3R11_3R11.txt  3-C-R-Y-1-1-2R11_3R11_1R11.txt  3-C-R-Y-1-1-2R11_3R11_2R11.txt  3-C-R-Y-1-1-3R11_3R11_1R11.txt  (+17 more)
(+50 files in other folders)
