[project]
name = "fragilitycurves"
version = "0.1.0"
description = "Proyecto para hacer regresión sobre curvas de fragilidad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
]
